--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+Walk-in_Library/DatabaseOverlord.Context.cs
+Walk-in_Library/DatabaseOverlord.Context.tt
+packages/
