--- a/Walk-in_Library/App.config
+++ b/Walk-in_Library/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="DatabaseOverlordContainer" connectionString="metadata=res://*/DatabaseOverlord.csdl|res://*/DatabaseOverlord.ssdl|res://*/DatabaseOverlord.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LOCALHOST\SQLEXPRESS;initial catalog=librarydb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DatabaseOverlordContainer" connectionString="data source=LOCALHOST\SQLEXPRESS;initial catalog=librarydb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
